# ada-dev-py-ai

./: README.md  config_openai.py  create_story.py  pyproject.toml
ada_dev_py_ai/: models.py
ada_dev_py_ai/crewai/: agents.py  create_story_ai.py  crew.py  project_creation.py  reverse_engineering.py  tasks.py
ada_dev_py_ai/fastapi/: api.py  config_openai.py  models.py
